feat(table): extending feature to allow custom input of different elements

--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -53,6 +53,11 @@ table {
   overflow-x: auto;
 }
 
+td > .row {
+  display: flex;
+  gap: var(--sgds-font-size-1)
+}
+
 @media (max-width: 575.98px) {
   .table-responsive-sm {
     -webkit-overflow-scrolling: touch;
