--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -15,6 +15,7 @@
 .sgds-col-2 { grid-column: span 2; }
 .sgds-col-3 { grid-column: span 3; }
 .sgds-col-4 { grid-column: span 4; }
+.sgds-col-center-2 { grid-column: 2 / span 2; }
 .sgds-col-none { display: none; }
 
 @media (min-width: 512px) {  /* sgds-breakpoint-sm */
@@ -23,7 +24,7 @@
   }
 
   .sgds-container {
-    max-width: calc(100% - 64px); /* outer margin of 32px on each side */
+    max-width: calc(100% - 48px); /* outer margin of 24px on each side */
   }
 
   .sgds-col-sm-1 { grid-column: span 1; }
@@ -34,17 +35,16 @@
   .sgds-col-sm-6 { grid-column: span 6; }
   .sgds-col-sm-7 { grid-column: span 7; }
   .sgds-col-sm-8 { grid-column: span 8; }
+  .sgds-col-sm-center-2 { grid-column: 4 / span 2; }
+  .sgds-col-sm-center-4 { grid-column: 3 / span 4; }
+  .sgds-col-sm-center-6 { grid-column: 2 / span 6; }
   .sgds-col-none { display: revert; }
   .sgds-col-sm-none { display: none; }
 }
 
-@media (min-width: 1024px) {  /* sgds-breakpoint-md */
-  .sgds-grid {
-    grid-template-columns: repeat(12, 1fr);
-  }
-
+@media (min-width: 768px) {  /* sgds-breakpoint-md */
   .sgds-container {
-    max-width: 896px;
+    max-width: calc(100% - 64px); /* outer margin of 32px on each side */
   }
 
   .sgds-col-md-1 { grid-column: span 1; }
@@ -55,21 +55,20 @@
   .sgds-col-md-6 { grid-column: span 6; }
   .sgds-col-md-7 { grid-column: span 7; }
   .sgds-col-md-8 { grid-column: span 8; }
-  .sgds-col-md-9 { grid-column: span 9; }
-  .sgds-col-md-10 { grid-column: span 10; }
-  .sgds-col-md-11 { grid-column: span 11; }
-  .sgds-col-md-12 { grid-column: span 12; }
+  .sgds-col-md-center-2 { grid-column: 4 / span 2; }
+  .sgds-col-md-center-4 { grid-column: 3 / span 4; }
+  .sgds-col-md-center-6 { grid-column: 2 / span 6; }
   .sgds-col-sm-none { display: revert; }
   .sgds-col-md-none { display: none; }
 }
 
-@media (min-width: 1280px) {  /* sgds-breakpoint-lg */
+@media (min-width: 1024px) {  /* sgds-breakpoint-lg */
   .sgds-grid {
-    gap: var(--sgds-gap-xl);
+    grid-template-columns: repeat(12, 1fr);
   }
 
   .sgds-container {
-    max-width: 1176px;
+    max-width: 896px;
   }
 
   .sgds-col-lg-1 { grid-column: span 1; }
@@ -84,13 +83,22 @@
   .sgds-col-lg-10 { grid-column: span 10; }
   .sgds-col-lg-11 { grid-column: span 11; }
   .sgds-col-lg-12 { grid-column: span 12; }
+  .sgds-col-lg-center-2 { grid-column: 6 / span 2; }
+  .sgds-col-lg-center-4 { grid-column: 5 / span 4; }
+  .sgds-col-lg-center-6 { grid-column: 4 / span 6; }
+  .sgds-col-lg-center-8 { grid-column: 3 / span 8; }
+  .sgds-col-lg-center-10 { grid-column: 2 / span 10; }
   .sgds-col-md-none { display: revert; }
   .sgds-col-lg-none { display: none; }
 }
 
-@media (min-width: 1440px) {  /* sgds-breakpoint-xl */
+@media (min-width: 1280px) {  /* sgds-breakpoint-xl */
+  .sgds-grid {
+    gap: var(--sgds-gap-xl);
+  }
+
   .sgds-container {
-    max-width: 1320px;
+    max-width: 1176px;
   }
 
   .sgds-col-xl-1 { grid-column: span 1; }
@@ -105,6 +113,37 @@
   .sgds-col-xl-10 { grid-column: span 10; }
   .sgds-col-xl-11 { grid-column: span 11; }
   .sgds-col-xl-12 { grid-column: span 12; }
+  .sgds-col-xl-center-2 { grid-column: 6 / span 2; }
+  .sgds-col-xl-center-4 { grid-column: 5 / span 4; }
+  .sgds-col-xl-center-6 { grid-column: 4 / span 6; }
+  .sgds-col-xl-center-8 { grid-column: 3 / span 8; }
+  .sgds-col-xl-center-10 { grid-column: 2 / span 10; }
   .sgds-col-lg-none { display: revert; }
   .sgds-col-xl-none { display: none; }
+}
+
+@media (min-width: 1440px) {  /* sgds-breakpoint-2-xl */
+  .sgds-container {
+    max-width: 1320px;
+  }
+
+  .sgds-col-2-xl-1 { grid-column: span 1; }
+  .sgds-col-2-xl-2 { grid-column: span 2; }
+  .sgds-col-2-xl-3 { grid-column: span 3; }
+  .sgds-col-2-xl-4 { grid-column: span 4; }
+  .sgds-col-2-xl-5 { grid-column: span 5; }
+  .sgds-col-2-xl-6 { grid-column: span 6; }
+  .sgds-col-2-xl-7 { grid-column: span 7; }
+  .sgds-col-2-xl-8 { grid-column: span 8; }
+  .sgds-col-2-xl-9 { grid-column: span 9; }
+  .sgds-col-2-xl-10 { grid-column: span 10; }
+  .sgds-col-2-xl-11 { grid-column: span 11; }
+  .sgds-col-2-xl-12 { grid-column: span 12; }
+  .sgds-col-2-xl-center-2 { grid-column: 6 / span 2; }
+  .sgds-col-2-xl-center-4 { grid-column: 5 / span 4; }
+  .sgds-col-2-xl-center-6 { grid-column: 4 / span 6; }
+  .sgds-col-2-xl-center-8 { grid-column: 3 / span 8; }
+  .sgds-col-2-xl-center-10 { grid-column: 2 / span 10; }
+  .sgds-col-xl-none { display: revert; }
+  .sgds-col-2-xl-none { display: none; }
 }
