--- a/src/components/Checkbox/checkbox.css
+++ b/src/components/Checkbox/checkbox.css
@@ -1,3 +1,8 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  gap: var(--sgds-gap-xs);
+}
 input {
   margin: 0;
 }
@@ -6,7 +11,6 @@ input {
   display: flex;
   gap: var(--sgds-form-gap-md);
   padding: var(--sgds-form-padding-inline-sm) 0px;
-  margin-bottom: var(--sgds-margin-3-xs);
 }
 
 .form-check-input-container {
