fix(subnav): update active selector

--- a/src/components/Subnav/subnav-item.css
+++ b/src/components/Subnav/subnav-item.css
@@ -1,4 +1,4 @@
-:host(:not([disabled])[active="true"]) ::slotted(*) {
+:host(:not([disabled])[active]:not([active="false"])) ::slotted(*) {
   --sgds-link-color-default: var(--sgds-primary-color-default);
   color: var(--sgds-link-color-default, var(--sgds-primary-color-default));
   border-bottom: var(--sgds-border-width-2) solid var(--sgds-primary-border-color-default);
@@ -8,7 +8,7 @@
   padding: var(--sgds-padding-sm) var(--sgds-padding-lg);
 }
 
-:host(:not([disabled])[isCollapsed][active="true"]) ::slotted(*) {
+:host(:not([disabled])[isCollapsed][active]:not([active="false"])) ::slotted(*) {
   border-bottom: none;
   background-color: var(--sgds-bg-translucent-subtle);
 }
@@ -27,7 +27,7 @@
   white-space: nowrap;
 }
 
-:host(:not([disabled])[active="true"]) ::slotted(*) {
+:host(:not([disabled])[active]:not([active="false"])) ::slotted(*) {
   --sgds-link-color-default: var(--sgds-primary-color-default);
   color: var(--sgds-link-color-default, var(--sgds-primary-color-default));
 }
