--- a/src/components/Subnav/subnav.css
+++ b/src/components/Subnav/subnav.css
@@ -8,64 +8,28 @@
 nav {
   background-color: var(--sgds-surface-default);
   border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
-}
-
-nav.mobile {
-  border-bottom: none;
-  position: absolute;
   width: 100%;
 }
 
 .subnav {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  flex-direction: column;
   align-items: flex-start;
-  gap: var(--sgds-gap-xl);
-  row-gap: var(--sgds-gap-none);
 }
 
-.subnav.mobile {
-  padding: var(--sgds-padding-md) var(--sgds-padding-lg);
+.header-container {
+  display: flex;
   gap: var(--sgds-gap-md);
-  flex-wrap: nowrap;
+  width: 100%;
+  padding: var(--sgds-padding-md) var(--sgds-padding-lg);
 }
 
 slot[name="header"]::slotted(*) {
   --sgds-margin-3-xs: var(--sgds-margin-none);
   flex: 1 1 auto;
   margin-bottom: var(--sgds-margin-3-xs, --sgds-margin-none);
-  padding-top: var(--sgds-padding-lg);
-}
-
-.subnav.mobile slot[name="header"]::slotted(*) {
   padding-top: var(--sgds-padding-none);
-}
-
-.subnav-nav-group {
-  display: flex;
-  flex: 1 1 0;
-  justify-content: space-between;
-  align-items: center;
-  gap: var(--sgds-gap-xl);
-}
-
-.subnav-nav {
-  display: flex;
-  align-items: center;
-  gap: var(--sgds-gap-lg);
-}
-
-.subnav-nav-mobile {
-  display: flex;
-  flex-direction: column;
-  transition: transform 0.2s ease-in-out;
-  overflow-y: auto;
-}
-
-.subnav-actions {
-  display: flex;
-  align-items: center;
-  gap: var(--sgds-gap-md);
 }
 
 .subnav-toggler {
@@ -77,21 +41,104 @@ slot[name="header"]::slotted(*) {
   transform: rotate(-180deg);
 }
 
-.subnav-dropdown {
+.subnav-nav-group {
+  display: flex;
+  flex: 1 1 0;
+  flex-direction: column;
   width: 100%;
-  background-color: var(--sgds-surface-default);
-  border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
+  align-items: flex-start;
 }
 
-.subnav-actions-mobile {
+.subnav-nav {
+  display: none;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  transition: transform 0.2s ease-in-out;
+  overflow-y: auto;
+}
+
+.subnav-nav ::slotted(*) {
+  width: 100%;
+}
+
+.subnav-actions {
   display: flex;
   flex-direction: column;
   gap: var(--sgds-gap-md);
   padding: var(--sgds-padding-md) var(--sgds-padding-lg);
   position: sticky;
   bottom: 0;
+  width: 100%;
 }
 
-.hidden {
-  display: none;
+slot[name="actions"]::slotted(*) {
+  width: 100%;
+}
+
+@media screen and (max-width: 1023px) {
+  .subnav.sgds-container {
+    max-width: inherit;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  nav {
+    position: inherit;
+  }
+
+  .subnav {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--sgds-gap-xl);
+    row-gap: var(--sgds-gap-none);
+  }
+
+  .header-container {
+    padding: var(--sgds-padding-none);
+    width: auto;
+    flex: 1;
+  }
+
+  slot[name="header"]::slotted(*) {
+    padding-top: var(--sgds-padding-lg);
+    white-space: nowrap;
+  }
+
+  .subnav-nav-group {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: var(--sgds-gap-xl);
+    flex: 1;
+  }
+
+  .subnav-nav {
+    display: flex;
+    gap: var(--sgds-gap-lg);
+    align-items: center;
+    flex-direction: row;
+    overflow-y: inherit;
+    transition: none;
+  }
+  
+  .subnav-nav ::slotted(*) {
+    width: inherit;
+  }
+  
+  .subnav-toggler {
+    display: none;
+  }
+
+  .subnav-actions {
+    flex-direction: row;
+    align-items: center;
+    padding: var(--sgds-padding-none);
+    position: inherit;
+    flex: 0;
+  }
+
+  slot[name="actions"]::slotted(*) {
+    width: inherit;
+  }
 }
