--- a/src/components/Table/table-head.css
+++ b/src/components/Table/table-head.css
@@ -1,6 +1,6 @@
 :host {
   display: table-cell;
   padding: var(--sgds-padding-lg);
-  font-weight: bold!important;
-  border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-muted);
+  font-weight: bold;
+  border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-emphasis);
 }
