chore(Table): better handled border for table head and rendering of table based on slots

--- a/src/components/Table/table-head.css
+++ b/src/components/Table/table-head.css
@@ -4,3 +4,7 @@
   font-weight: bold;
   border-bottom: var(--sgds-border-width-1) solid var(--sgds-border-color-emphasis);
 }
+
+:host(:not([border])){
+  border-color: var(--sgds-border-color-muted);
+ }
