fix(Input): readonly UI
update border-color, remove muted background color, new tokens --sgds-form-surface-raised

--- a/src/themes/day.css
+++ b/src/themes/day.css
@@ -129,6 +129,7 @@
   /* Semantic - Form Color */
   --sgds-form-surface-default: var(--sgds-gray-000);
   --sgds-form-surface-emphasis: var(--sgds-gray-700);
+  --sgds-form-surface-raised: var(--sgds-gray-100);
   --sgds-form-surface-subtle: var(--sgds-gray-400);
   --sgds-form-surface-muted: var(--sgds-gray-200);
   --sgds-form-surface-inverse: var(--sgds-gray-900);
