--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -53,10 +53,10 @@
 }
 
 .form-control-group.readonly {
-  border-color: var(--sgds-border-color-muted);
+  background-color: var(--sgds-form-surface-raised);
 }
 
-.form-control-group:not(.disabled):not(.is-invalid):hover {
+.form-control-group:not(.disabled):not(.is-invalid):not(.readonly):hover {
   border: var(--sgds-form-border-width-thick) solid var(--sgds-border-color-emphasis);
 }
 
