style(icon list): align icon and text at top instead of center

--- a/src/components/IconList/icon-list.css
+++ b/src/components/IconList/icon-list.css
@@ -7,7 +7,7 @@ slot {
 slot::slotted(*){
   display: flex;
   gap: var(--sgds-gap-xs);
-  align-items: center;
+  align-items: flex-start;
 }
 
 .sm {
