style(dropdown): apply relative position on dropdown class

--- a/src/components/Dropdown/dropdown.css
+++ b/src/components/Dropdown/dropdown.css
@@ -1,9 +1,9 @@
 :host {
-  position: relative;
+  /* position: relative; */
 }
 
-
 .dropdown {
+  position: relative;
   display: flex; 
   height: inherit;
 }
