fix(card): remove pointer events for disabled card

--- a/src/base/card.css
+++ b/src/base/card.css
@@ -1,3 +1,7 @@
+:host([disabled]) {
+  cursor: not-allowed;
+}
+
 :host([orientation="horizontal"]) .card {
   flex-direction: row;
 }
@@ -97,7 +101,7 @@ a.card {
 
 .card.disabled {
   opacity: var(--sgds-opacity-50);
-  cursor: not-allowed;
+  pointer-events: none;
 }
 
 a.card:focus {
