feat(link): add xs size and neutral variant for link component

--- a/src/components/Link/link.css
+++ b/src/components/Link/link.css
@@ -1,6 +1,6 @@
 .nav-link::slotted(a) {
   display: inline-flex;
-  height: var(--sgds-dimension-24);
+  line-height: var(--sgds-line-height-body);
   justify-content: center;
   align-items: center;
   gap: var(--sgds-gap-2-xs);
@@ -21,6 +21,10 @@
 .nav-link::slotted(a:focus),
 .nav-link::slotted(a:focus-visible) {
   outline: 0;
+}
+
+.nav-link::slotted(a:focus:not([disabled])),
+.nav-link::slotted(a:focus-visible:not([disabled])) {
   box-shadow: var(--sgds-box-shadow-focus);
 }
 
@@ -39,6 +43,18 @@
 :host([variant="danger"]) .nav-link::slotted(a:focus-visible) {
   --sgds-link-color-emphasis: var(--sgds-danger-color-emphasis);
   color: var(--sgds-link-color-emphasis, --sgds-danger-color-emphasis);
+}
+
+:host([variant="neutral"]) .nav-link::slotted(a) {
+  --sgds-link-color-default: var(--sgds-color-default);
+  color: var(--sgds-link-color-default, --sgds-color-default);
+}
+
+:host([variant="neutral"]) .nav-link::slotted(a:hover),
+:host([variant="neutral"]) .nav-link::slotted(a:focus),
+:host([variant="neutral"]) .nav-link::slotted(a:focus-visible) {
+  --sgds-link-color-emphasis: var(--sgds-color-default);
+  color: var(--sgds-link-color-emphasis, --sgds-color-default);
 }
 
 :host([variant="light"]) .nav-link::slotted(a) {
@@ -66,13 +82,15 @@
 }
 
 :host([size="lg"]) .nav-link::slotted(a) {
-  height: var(--sgds-dimension-32);
   font-size: var(--sgds-font-size-3) !important;
 }
 
 :host([size="sm"]) .nav-link::slotted(a) {
-  height: var(--sgds-dimension-20);
+  line-height: var(--sgds-line-height-min);
   font-size: var(--sgds-font-size-1) !important;
 }
 
-/* Check with Andy if target blank need to auto add an icon */
+:host([size="xs"]) .nav-link::slotted(a) {
+  line-height: var(--sgds-line-height-16);
+  font-size: var(--sgds-font-size-0) !important;
+}
