docs(*): remove parent height for container in storybook
not necessary to set parent height anymore after converting menu to position fixed

--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -60,3 +60,7 @@ ul.toc-list > * {
   padding: 16px;
   border-radius: 4px;
 }
+/* https://github.com/storybookjs/storybook/issues/23586 */
+.docs-story :not(.sb-story *) {
+  transform: none;
+}
