--- a/src/components/Masthead/masthead.css
+++ b/src/components/Masthead/masthead.css
@@ -35,10 +35,10 @@ a:hover {
 
 .container {
   width: 100%;
-  max-width: var(--sgds-mainnav-max-width);
+  max-width: var(--sgds-mainnav-max-width, 1440px);
   margin-left: auto;
   margin-right: auto;
-  padding: 0.25rem var(--sgds-mainnav-padding-x);
+  padding: 0.25rem var(--sgds-mainnav-padding-x, 2rem);
 }
 
 .sg-crest {
@@ -162,7 +162,7 @@ a.trusted-websites-link:focus-visible,
 
 @media screen and (max-width: 768px) {
   .container {
-    padding: 0.25rem var(--sgds-mainnav-mobile-padding-x);
+    padding: 0.25rem var(--sgds-mainnav-mobile-padding-x, 1.25rem);
   }
 
   .sgds-masthead-content .content-grid {
